<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/inputVarName"
        android:textSize="18sp"
        android:gravity="start|center"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:paddingLeft="15dp"
        android:paddingRight="0dp"
        android:textColor="@color/BASIC_text"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <View
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <EditText
            android:id="@+id/nameOfVar"
            android:hint="@string/enterName"
            android:maxLength="15"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/nameClearButton"
            android:text="@string/clear"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <EditText
            android:id="@+id/valueOfVar"
            android:hint="@string/enterValue"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/valueClearButton"
            android:text="@string/clear"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <Button
            android:id="@+id/confirmVarButton"
            android:text="@string/accept"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        <Button
            android:id="@+id/cancelVarButton"
            android:text="@string/decline"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_toLeftOf="@+id/confirmVarButton"
            android:layout_toStartOf="@+id/confirmVarButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:id="@+id/userDefAnsButton"
            android:text="@string/answer"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



    </RelativeLayout>

</LinearLayout>